# Otus_Editor

./: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists.txt  CMakeLists_8txt.html  Doxyfile  Editor_classes.drawio.html  README.md  README_8md.html  TargetDirectories_8txt.html  annotated.html  classBaseFormDocument-members.html  classBaseFormDocument.html  classBaseFormDocument__coll__graph.map  classBaseFormDocument__coll__graph.md5  classDocument-members.html  classDocument.html  classGraphical__object-members.html  classGraphical__object.html  classGraphical__object__inherit__graph.map  classGraphical__object__inherit__graph.md5  classIFormDocument.html  classIFormDocument__inherit__graph.map  classIFormDocument__inherit__graph.md5  classIUIForm-members.html  classIUIForm.html  classIUIForm__inherit__graph.map  classIUIForm__inherit__graph.md5  classLine-members.html  classLine.html  classLine__inherit__graph.map  classLine__inherit__graph.md5  classRedactor__Model-members.html  classRedactor__Model.html  classRedactor__View-members.html  classRedactor__View.html  classRedactor__controller-members.html  classRedactor__controller.html  classSquare-members.html  classSquare.html  (+79 more)
.gitignore/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lib_editor.vcxproj  lib_editor.vcxproj.filters  simple_editor.sln  simple_editor.vcxproj  simple_editor.vcxproj.filters
search/: all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  (+28 more)
(+23 files in other folders)
